tests/errors/err_missing_operand.bas
10 X = 5 +
20 PRINT X
